--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
+  "engines": { "node": "13.14.0", "npm": "6.14.4" },
   "main": "app.js",
   "scripts": {
     "start":"node app.js",
