--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1110.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -24,7 +25,8 @@
     "firebase-admin": "^9.11.1",
     "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.0",
     "nodemailer-smtp-pool": "^2.8.3",
